# SnnKit

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: dense_vs_sparse_scaling.py  local_vs_bptt_comparison.py
benchmarks/results/: local_vs_bptt.json
docs/: connectome-demo.md  connectome-narrative.md  local-vs-bptt.md  profiling-notes.md  spike-tensor-spec.md
notebooks/: connectome_disease_spread_demo.ipynb  week01_single_neuron.ipynb  week06_izhikevich_validation.ipynb
src/snnkit/: __init__.py  reproducibility.py
src/snnkit/api/: __init__.py  neuron_group.py  synapse_group.py
src/snnkit/connectome/: __init__.py  diffusion.py  loader.py
src/snnkit/connectome/data/: SOURCE.md
src/snnkit/core/: __init__.py  delays.py  neuron.py  parser.py  population.py  spikes.py  synapses.py
src/snnkit/models/: __init__.py  izhikevich.py  lif.py
src/snnkit/training/: __init__.py  bptt.py  stdp.py  superspike.py  surrogate.py
tests/: test_bptt_training.py  test_connectome_diffusion.py  test_connectome_loader.py  test_izhikevich.py  test_lif_firing_rate.py  test_parser.py  test_sparse_dense_equivalence.py  test_stdp.py  test_superspike.py  test_surrogate_gradient.py  test_synapse_current.py  test_synapse_delay.py
